hphp/hack/test/package/package_access/package_relationship.php.exp.v2
error: Typing[4472] Cannot access a class defined in package pkg4 from package pkg3 [1]
-> D is defined in package_relationship.php--d.php [2]
-> package_relationship.php--d.php belongs to package pkg4 by this package override [3]
-> package_relationship.php--c.php is in package pkg3 by this package override [4]
-> And package pkg3 does not include package pkg4 [5]

package_relationship.php--c.php:7:13
     1 | <?hh
[4]  2 | <<file: __PackageOverride('pkg3')>> // package pkg3 (include pkg2)
     3 | <<__EntryPoint>>
     4 | function test(): void {
     5 |    $b = new B(); // ok
     6 |    $a = new A(); // ok by transitive inclusion
[1]  7 |    $d = new D(); // error
     8 | }

package_relationship.php--d.php:3:7
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg4')>> // package pkg4
[2]  3 | class D {}

PACKAGES.toml:13:11
    11 | includes = ["pkg1"]
    12 | 
[5] 13 | [packages.pkg3]
    14 | includes = ["pkg2", "pkg1"]
    15 | 

1 error found
